<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZillowCSCI571</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="street">Address*:</string>
    <string name="hintStreet">Street Address</string>
    <string name="city">City*:</string>
    <string name="hintCity">City</string>
    <string name="state">State*:</string>
    <string name="hintState">Select State</string>
    <string name="search">Search Your Properties Here</string>
    <string name="btn">Search</string>
    <string name="facebook_app_id">986922191324633</string>

    <string-array name="state_names">
        <item>Choose State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_sub">Results from Zillow</string>
    <string name="title_section1">Basic Info</string>
    <string name="title_section2">Historical Zestimates</string>
    <string name="title_activity_info">Info Activity</string>
    <string name="title_activity_zest">Zest Activity</string>
    <string name="title_section3">Section 3</string>

</resources>