<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhi.usc.zillowcsci571.MainZillow" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".LinearLayout" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/search"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/street"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStreet"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rect_text_edit"
                android:ems="15"
                android:hint="@string/hintStreet"
                android:inputType="text"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/e1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=" "
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rect_text_edit"
                android:hint="@string/hintCity"
                android:paddingLeft="10dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/e2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=" "
                android:textColor="#FF0000" />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/state"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rect_text_edit"
                android:entries="@array/state_names"
                android:paddingLeft="10dp"
                android:prompt="@string/hintState" />

            <TextView
                android:id="@+id/e3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=" "
                android:textColor="#FF0000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:context=".LinearLayout" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:background="@android:drawable/btn_default"
                    android:layout_height="wrap_content"
                    android:text="@string/btn" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="-100dp"
                    android:src="@drawable/logo" />
            </RelativeLayout>

            <TextView
                android:id="@+id/hr"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/er"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:background="#66222222"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>